Copy posts-list styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <router-outlet></router-outlet>
 
-<app-posts-list></app-posts-list>
+<div class="posts-list-container">
+  <app-posts-list></app-posts-list>
+</div>
