--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <router-outlet></router-outlet>
 
+<app-navigation></app-navigation>
+
 <div class="posts-list-container">
   <app-posts-list></app-posts-list>
 </div>
