Convert posts-list styling to BEM

--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,49 +1,53 @@
-<div *ngFor="let post of posts" class="post-item">
-  <div class="post-rating-buttons">
+<div *ngFor="let post of posts" class="post-list-item">
+  <div class="post-list-item__rating-container">
     <button
       type="button"
-      class="post-rating-vote-button post-rating-vote-button--up"
+      class="post-list-item__rating-vote-button post-list-item__rating-vote-button--up"
       [ngClass]="{
-        'post-rating-vote-button--vote-up': post.user_post_rating === 1,
-        'post-rating-vote-button--vote-down': post.user_post_rating === -1
+        'post-list-item__rating-vote-button--vote-up':
+          post.user_post_rating === 1,
+        'post-list-item__rating-vote-button--vote-down':
+          post.user_post_rating === -1
       }"
     >
       <span class="visually-hidden">Vote up</span>
     </button>
     <div
-      class="post-rating"
+      class="post-list-item__rating"
       [ngClass]="{
-        'post-rating--vote-up': post.user_post_rating === 1,
-        'post-rating--vote-down': post.user_post_rating === -1
+        'post-list-item__rating--vote-up': post.user_post_rating === 1,
+        'post-list-item__rating--vote-down': post.user_post_rating === -1
       }"
     >
       {{ post.rating }}
     </div>
     <button
       type="button"
-      class="post-rating-vote-button post-rating-vote-button--down"
+      class="post-list-item__rating-vote-button post-list-item__rating-vote-button--down"
       [ngClass]="{
-        'post-rating-vote-button--vote-up': post.user_post_rating === 1,
-        'post-rating-vote-button--vote-down': post.user_post_rating === -1
+        'post-list-item__rating-vote-button--vote-up':
+          post.user_post_rating === 1,
+        'post-list-item__rating-vote-button--vote-down':
+          post.user_post_rating === -1
       }"
     >
       <span class="visually-hidden">Vote down</span>
     </button>
   </div>
-  <div class="post-content">
+  <div class="post-list-item__content">
     <span *ngIf="post.url">
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <small class="external-url-domain">
+      <small class="post-list-item__external-url-domain">
         {{ this.extractPostUrlDomain(post) }}
       </small>
     </span>
     <a *ngIf="!post.url" routerLink="/post/{{ post.id }}">{{ post.title }}</a>
-    <div class="post-details">
+    <div class="post-list-item__details">
       Submitted {{ post.submitted_at | fromNow }} by
       <a routerLink="/users/{{ post.user.id }}"> {{ post.user.username }}</a>
     </div>
     <div>
-      <a class="post-comment-count" routerLink="/post/{{ post.id }}"
+      <a class="post-list-item__comment-count" routerLink="/post/{{ post.id }}"
         >{{ post.comment_count }} comments</a
       >
     </div>
