--- a/src/app/posts-list/posts-list.component.scss
+++ b/src/app/posts-list/posts-list.component.scss
@@ -4,89 +4,89 @@ $vote-default-color: #c6c6c6;
 $vote-up-color: #ff8b60;
 $vote-down-color: #9494ff;
 
-.post-item {
+.post-list-item {
   display: flex;
   align-items: center;
   margin-top: $post-spacing;
   min-height: 50px;
-}
 
-.post-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.post-rating-buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: $post-spacing;
-}
-
-.post-rating-vote-button {
-  background: none;
-  border-width: inherit;
-  padding: 0;
-  width: 0;
-  height: 0;
-  border-left: $vote-arrow-size solid transparent;
-  border-right: $vote-arrow-size solid transparent;
-
-  &--up {
-    border-bottom: $vote-arrow-size solid $vote-default-color;
+  &__rating-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: $post-spacing;
   }
 
-  &--vote-up {
-    border-bottom-color: $vote-up-color;
+  &__rating-vote-button {
+    background: none;
+    border-width: inherit;
+    padding: 0;
+    width: 0;
+    height: 0;
+    border-left: $vote-arrow-size solid transparent;
+    border-right: $vote-arrow-size solid transparent;
+
+    &--up {
+      border-bottom: $vote-arrow-size solid $vote-default-color;
+    }
+
+    &--vote-up {
+      border-bottom-color: $vote-up-color;
+    }
+
+    &--down {
+      border-top: $vote-arrow-size solid $vote-default-color;
+    }
+
+    &--vote-down {
+      border-top-color: $vote-down-color;
+    }
   }
 
-  &--down {
-    border-top: $vote-arrow-size solid $vote-default-color;
+  &__rating {
+    margin: 6px 0;
+    color: $vote-default-color;
+
+    &--vote-up {
+      color: $vote-up-color;
+    }
+
+    &--vote-down {
+      color: $vote-down-color;
+    }
   }
 
-  &--vote-down {
-    border-top-color: $vote-down-color;
-  }
-}
-
-.post-rating {
-  margin: 6px 0;
-  color: $vote-default-color;
-
-  &--vote-up {
-    color: $vote-up-color;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
-  &--vote-down {
-    color: $vote-down-color;
-  }
-}
-
-.post-details,
-.post-comment-count {
-  font-size: 12px;
-  color: #888;
-}
-
-.post-details {
-  padding-top: 6px;
-}
-
-.post-comment-count {
-  font-weight: bold;
-}
-
-.external-url-domain {
-  margin-left: 6px;
-  color: #888;
-  font-size: 10px;
-
-  &:before {
-    content: "(";
+  &__details,
+  &__comment-count {
+    font-size: 12px;
+    color: #888;
   }
 
-  &:after {
-    content: ")";
+  &__details {
+    padding-top: 6px;
+  }
+
+  &__comment-count {
+    font-weight: bold;
+  }
+
+  &__external-url-domain {
+    margin-left: 6px;
+    color: #888;
+    font-size: 10px;
+
+    &:before {
+      content: "(";
+    }
+
+    &:after {
+      content: ")";
+    }
   }
 }
