--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<router-outlet></router-outlet>
-
 <app-navigation></app-navigation>
 
-<div class="posts-list-container">
-  <app-posts-list></app-posts-list>
+<div class="app-container">
+  <router-outlet></router-outlet>
 </div>
