Add placeholder comment component

--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -9,4 +9,9 @@
       <hr />
     </div>
   </div>
+
+  <app-comment
+    *ngFor="let comment of topLevelComments"
+    [comment]="comment"
+  ></app-comment>
 </div>
