--- a/src/app/post-item/post-item.component.scss
+++ b/src/app/post-item/post-item.component.scss
@@ -19,7 +19,7 @@
 
   &__rating-vote-button {
     background: none;
-    border-width: inherit;
+    border-width: 0;
     padding: 0;
     width: 0;
     height: 0;
