--- a/src/app/post-item/post-item.component.scss
+++ b/src/app/post-item/post-item.component.scss
@@ -1,9 +1,7 @@
+@import "../../mixins";
+
 .post-item {
   $post-spacing: 15px;
-  $vote-arrow-size: 10px;
-  $vote-default-color: #c6c6c6;
-  $vote-up-color: #ff8b60;
-  $vote-down-color: #9494ff;
 
   display: flex;
   align-items: center;
@@ -17,44 +15,7 @@
     margin-right: $post-spacing;
   }
 
-  &__rating-vote-button {
-    background: none;
-    border-width: 0;
-    padding: 0;
-    width: 0;
-    height: 0;
-    border-left: $vote-arrow-size solid transparent;
-    border-right: $vote-arrow-size solid transparent;
-
-    &--up {
-      border-bottom: $vote-arrow-size solid $vote-default-color;
-    }
-
-    &--vote-up {
-      border-bottom-color: $vote-up-color;
-    }
-
-    &--down {
-      border-top: $vote-arrow-size solid $vote-default-color;
-    }
-
-    &--vote-down {
-      border-top-color: $vote-down-color;
-    }
-  }
-
-  &__rating {
-    margin: 6px 0;
-    color: $vote-default-color;
-
-    &--vote-up {
-      color: $vote-up-color;
-    }
-
-    &--vote-down {
-      color: $vote-down-color;
-    }
-  }
+  @include vote-buttons($vote-arrow-size: 10px);
 
   &__content {
     display: flex;
