--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -4,3 +4,48 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+@mixin vote-buttons($vote-arrow-size) {
+  $vote-default-color: #c6c6c6;
+  $vote-up-color: #ff8b60;
+  $vote-down-color: #9494ff;
+
+  &__rating-vote-button {
+    background: none;
+    border-width: 0;
+    padding: 0;
+    width: 0;
+    height: 0;
+    border-left: $vote-arrow-size solid transparent;
+    border-right: $vote-arrow-size solid transparent;
+
+    &--up {
+      border-bottom: $vote-arrow-size solid $vote-default-color;
+    }
+
+    &--vote-up {
+      border-bottom-color: $vote-up-color;
+    }
+
+    &--down {
+      border-top: $vote-arrow-size solid $vote-default-color;
+    }
+
+    &--vote-down {
+      border-top-color: $vote-down-color;
+    }
+  }
+
+  &__rating {
+    margin: 6px 0;
+    color: $vote-default-color;
+
+    &--vote-up {
+      color: $vote-up-color;
+    }
+
+    &--vote-down {
+      color: $vote-down-color;
+    }
+  }
+}
