--- a/src/app/comment/comment.component.scss
+++ b/src/app/comment/comment.component.scss
@@ -54,6 +54,12 @@
     color: #111;
   }
 
+  &__content {
+    &--collapsed {
+      display: none;
+    }
+  }
+
   &__nested-comments {
     border-left: 1px solid #e0e0e0;
     padding-left: 16px;
