--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,1 +1,6 @@
-<app-post-item *ngFor="let post of posts" [post]="post"></app-post-item>
+<ng-template [ngIf]="!isLoading" [ngIfElse]="loading">
+  <app-post-item *ngFor="let post of posts" [post]="post"></app-post-item>
+</ng-template>
+<ng-template #loading>
+  <div>Loading...</div>
+</ng-template>
