--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -1,5 +1,18 @@
-<ng-template [ngIf]="!isLoading" [ngIfElse]="loading">
-  <app-post-item *ngFor="let post of posts" [post]="post"></app-post-item>
+<ng-template
+  [ngIf]="(posts$ | async)?.isLoading === false"
+  [ngIfElse]="loading"
+>
+  <ng-template [ngIf]="(posts$ | async)?.error === null" [ngIfElse]="error">
+    <app-post-item
+      *ngFor="let post of (posts$ | async)?.posts"
+      [post]="post"
+    ></app-post-item>
+  </ng-template>
+  <ng-template #error>
+    <div>
+      An error occurred while loading the data: {{ (posts$ | async)?.error }}
+    </div>
+  </ng-template>
 </ng-template>
 <ng-template #loading>
   <div>Loading...</div>
